# HexAI

./: .gitignore  README.md  START_SERVER.bat  TRAIN_ASYMMETRIC.html  TRAIN_NEW.html  analyze_gen15.js  analyze_policy.html  comparison_report.html  debug_scoring.html  evaluate_policy.html  extract_opening_book.js  free_opening_simulator.html  hexuki.js  hexuki.wasm  hexuki_ANTISYMMETRY_TEST.html  hexuki_ai_test_phase1.html  hexuki_ai_trainer.js  hexuki_exhaustive_openings_19openings_2025-10-22T12-50-41.csv  hexuki_exhaustive_openings_54openings_2025-10-21T23-03-25.csv  hexuki_exhaustive_openings_5openings_2025-10-22T12-49-39.csv  hexuki_game_engine.js  hexuki_game_engine_asymmetric.js  hexuki_game_engine_free_opening.js  hexuki_game_engine_v2.js  hexuki_sim_250games_2025-10-21T15-31-34.csv  hexuki_sim_2700games_2025-10-21T23-03-32.csv  hybrid_ai_player.js  interpretation_guide.html  mcts_ai_player.js  minimax_benchmark.html  minimax_endgame.js  minimax_endgame_optimized.js  minimax_endgame_solver.js  minimax_training_strategy.js  opening_book_dashboard.html  opening_book_generator.js  opening_book_training_config.js  opening_sequence_dashboard.html  opening_sequence_generator.js  opening_sequence_visualizer.html  (+31 more)
c++engine/: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CONFIGURATION_GUIDE.md  FIXES_COMPLETE.md  PUZZLE_GUIDE.md  QUICK_START.md  README.md  WASM_SETUP.md  build_wasm.bat  test_wasm.html
c++engine/benchmarks/: CMakeLists.txt  bench_basic.cpp
c++engine/include/ai/: evaluation.h  mcts.h  mcts_node.h  minimax.h
c++engine/include/core/: bitboard.h  game_state.h  move.h  zobrist.h
c++engine/include/utils/: constants.h  timer.h
c++engine/src/: main.cpp  wasm_interface.cpp
c++engine/src/ai/: evaluation.cpp  mcts.cpp  mcts_node.cpp  minimax.cpp
c++engine/src/core/: bitboard.cpp  game_state.cpp  move.cpp  zobrist.cpp
c++engine/tests/: CMakeLists.txt  test_basic.cpp  test_mcts.cpp  test_mcts_50k.cpp  test_minimax.cpp  test_puzzle.cpp  test_validation.cpp  test_validation_detailed.cpp
c++engine/wasm/: hexuki.wasm
js/: puzzle-editor.js
levels/: 3_4_and_5.json  3threes.json  3threestwo.json  4_nines.json  cirlce_of_9.json  early_middle.json  kinda_hard.json  might_draw.json  usethe3first.json
